<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center|center_horizontal|end"
    tools:context=".ui.registerdriver.RegisterDriverActivity">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="350dp"
        android:layout_height="200dp"
        android:layout_marginTop="200dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <EditText
            android:id="@+id/name_driver_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:hint="@string/input_name_text"
            android:inputType="textPersonName"
            android:textSize="20dp"
            tools:layout_editor_absoluteX="95dp"
            tools:layout_editor_absoluteY="146dp" />

        <EditText
            android:id="@+id/email_driver_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:hint="@string/input_email_text"
            android:inputType="textEmailAddress"
            android:textSize="20dp"
            tools:layout_editor_absoluteX="90dp"
            tools:layout_editor_absoluteY="146dp" />

        <EditText
            android:id="@+id/password_driver_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:hint="@string/input_password_text"
            android:inputType="textPassword"
            android:textSize="20dp"
            tools:layout_editor_absoluteX="97dp"
            tools:layout_editor_absoluteY="59dp" />

        <EditText
            android:id="@+id/rep_password_driver_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:hint="@string/rep_password_text"
            android:inputType="textPassword"
            android:textSize="20dp"
            tools:layout_editor_absoluteX="102dp"
            tools:layout_editor_absoluteY="312dp" />
    </LinearLayout>

    <CheckBox
        android:id="@+id/location_check_box"
        android:layout_width="250dp"
        android:layout_height="50dp"
        android:layout_marginTop="36dp"
        android:text="@string/allow_location_text"
        android:textColor="#094067"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout" />

    <Button
        android:id="@+id/login2_button"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:backgroundTint="#3DA9FC"
        android:text="@string/login_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/location_check_box" />

    <ImageView
        android:id="@+id/register_image_view"
        android:layout_width="110dp"
        android:layout_height="110dp"
        android:layout_marginTop="60dp"
        android:src="@drawable/editar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/question_account_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="35dp"
        android:layout_marginTop="40dp"
        android:text="@string/question_account_text"
        android:textColor="#094067"
        android:textSize="12sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/login2_button" />

    <TextView
        android:id="@+id/login_hypervinc_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="64dp"
        android:text="@string/hypervinc_login_text"
        android:textColor="#3DA9FC"
        android:textSize="12sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/question_account_text_view"
        app:layout_constraintTop_toBottomOf="@+id/login2_button" />
</androidx.constraintlayout.widget.ConstraintLayout>