<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ffffff"
    tools:context=".ui.select_mode.SelectMode">

    <ImageView
        android:id="@+id/autobus_image_view"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginTop="52dp"
        android:src="@drawable/autobus"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.514"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/login_button"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:layout_marginTop="140dp"
        android:backgroundTint="#3DA9FC"
        android:text="@string/login_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/autobus_image_view" />

    <Button
        android:id="@+id/register_button"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:layout_marginTop="16dp"
        android:backgroundTint="#3DA9FC"
        android:text="@string/register_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/login_button" />

    <RadioGroup
        android:id="@+id/mode_radio_group"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/register_button">

        <RadioButton
            android:id="@+id/user_radio_button"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:buttonTint="#EF4565"
            android:checked="true"
            android:text="@string/user_text" />

        <RadioButton
            android:id="@+id/driver_radio_button"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:buttonTint="#EF4565"
            android:text="@string/driver_text" />
    </RadioGroup>

    <ImageView
        android:id="@+id/background_decoration_image_view"
        android:layout_width="460dp"
        android:layout_height="255dp"
        android:layout_marginStart="4dp"
        android:layout_marginTop="120dp"
        android:layout_marginEnd="20dp"
        android:rotation="12"
        android:scaleType="center"
        android:src="@drawable/decoration_background"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/mode_radio_group"
        tools:ignore="SpeakableTextPresentCheck" />

    <ImageView
        android:id="@+id/logo_image_view"
        android:layout_width="280dp"
        android:layout_height="100dp"
        android:layout_marginTop="10dp"
        android:scaleType="centerCrop"
        android:src="@drawable/logo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/autobus_image_view" />
</androidx.constraintlayout.widget.ConstraintLayout>